--- a/Signup.css
+++ b/Signup.css
@@ -4,8 +4,11 @@ box-sizing:border-box;
 }
 
 body{
-
-margin:200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
 }
 .Container{
  background-color: cadetblue;
@@ -26,11 +29,10 @@ width: 350px;
     border-radius: 8px;
     border: 1px solid #ccc;
     padding: 10px;
-    margin-bottom: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
-button {
+input[type="submit"] {
 width:80px;
 height:40px;
 border-radius:4px;
@@ -38,4 +40,9 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 label{
 font-size:4vw;
+}
+.error{
+    width: 100%;
+    height: 15px;
+    margin: 5px 0;
 }
